@@ -6,6 +6,7 @@ Changelog
 ---------------------
 
 - Fix upgrade step that reindexes object_provides for PDFs so it performs better. [lgraf]
+- Add webactions in user menu. [njohner]
 - Update plone.rest api to 3.7.2. [mathias.leimgruber]
 - Respect tabbedview settings when generating an task or dossier excel export. [phgross]
 - Fix performance issue with search root exclusion in tabbed view listings. [lgraf]
